--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('imagenes/FONDO1.jpg');
+  background-image: url('imagenes/FONDO1.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
