--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flipbook con Transición</title>
-
-</head>
-<style>body {
+<style>
+body {
   margin: 0;
   height: 100vh;
   display: flex;
@@ -18,12 +11,16 @@
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
+  font-family: Arial, sans-serif;
 }
 
+/* 🟢 CARRUSEL BASE */
 .carousel-container {
   position: relative;
-  width: 800px;
-  height: 500px;
+  width: 80vw;
+  max-width: 800px;
+  height: 60vh;
+  max-height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,14 +29,14 @@
 
 .book {
   position: absolute;
-  width: 200px;
-  height: 300px;
+  width: 25%;
+  height: 55%;
   background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: transform 0.6s ease, z-index 0.6s ease, opacity 0.6s ease;
-  cursor: pointer;  
+  cursor: pointer;
 }
 
 .book img {
@@ -48,56 +45,60 @@
   object-fit: contain;
 }
 
+/* 🟢 POSICIONES */
 .position-left {
-  transform: translateX(-250px) scale(1);
+  transform: translateX(-180%) scale(0.8);
   z-index: 1;
   opacity: 0.8;
 }
 
 .position-center {
-  transform: translateX(0) scale(4);
+  transform: translateX(0) scale(1.8);
   z-index: 2;
   opacity: 1;
 }
 
 .position-right {
-  transform: translateX(250px) scale(1);
+  transform: translateX(180%) scale(0.8);
   z-index: 1;
   opacity: 0.8;
 }
 
 .position-behind {
-  transform: translateX(400px) scale(0);
+  transform: translateX(300%) scale(0);
   z-index: 0;
   opacity: 0;
 }
 
+/* 🟢 ETIQUETA DE PRECIO */
 .price-label {
   position: absolute;
-  top: 63%;
-  right: 9.5px;
+  bottom: 10px;
+  right: 8px;
   background-color: transparent;
   color: white;
-  padding: 5px 10px;
-  font-size: 9px;
+  font-size: 0.9rem;
   font-weight: bold;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8);
   opacity: 0;
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
-
 .position-center .price-label {
   opacity: 1;
-  transform: translateY(-50%) scale(1.2);
+  transform: scale(1.1);
 }
 
+/* 🟢 BOTONES GENERALES */
 .button-container {
   display: flex;
   gap: 20px;
   position: absolute;
-  right: 600px;
-  bottom: 100px;
+  bottom: 8%;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 5;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .arrow-button {
@@ -106,20 +107,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.452);
+  background-color: rgba(0, 0, 0, 0.45);
   color: white;
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.466);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
   transition: all 0.3s ease;
 }
-
 .arrow-button:hover {
   background-color: #2e00fa56;
   transform: scale(1.1);
 }
-
 .arrow-button::before {
   content: '';
   width: 15px;
@@ -129,300 +128,174 @@
   display: inline-block;
   transform: rotate(45deg);
 }
+#prevBtn::before { transform: rotate(135deg); }
+#nextBtn::before { transform: rotate(-45deg); }
 
-#prevBtn::before {
-  transform: rotate(135deg);
-}
-
-#nextBtn::before {
-  transform: rotate(-45deg);
-}
-
-.purchase-button {
-  padding: 15px 25px;
-  position: absolute;
-  left: 210px;
-  font-size: 18px;
-  background-color: #01e901;
-  color: #fff;
+/* 🟢 BOTONES DE ACCIÓN */
+.purchase-button,
+.subscribe-button {
+  padding: 12px 20px;
+  font-size: 16px;
   border: none;
   border-radius: 9px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
-
+.purchase-button {
+  background-color: #01e901;
+  color: #fff;
+}
 .purchase-button:hover {
   background-color: #24ff24;
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
-
 .subscribe-button {
-  padding: 15px 25px;
-  position: absolute;
-  right: -370px;
-  font-size: 18px;
   background-color: #ff5722;
   color: #fff;
-  border: none;
-  border-radius: 9px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.788);
   animation: pulse 1.9s infinite;
 }
-
 .subscribe-button:hover {
   background-color: #ff784e;
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
-
 @keyframes pulse {
-  0%, 100% {
-    transform: scale(1);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-  }
-  50% {
-    transform: scale(1.1);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
-  }
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.1); }
 }
 
+/* 🟢 BOTÓN COMPARTIR */
 .side-share-button {
-position: absolute;
-top: 195px;
-right: 180px;
-transform: translateY(-50%);
-z-index: 1000;
-display: flex; /* Alinea el botón y el texto */
-align-items: center; /* Centra verticalmente */
-background-color: transparent;
-}
-
-.side-share-button button {
-width: 50px; /* Tamaño del círculo */
-height: 50px; /* Tamaño del círculo */
-background-color: #007bff6e;
-color: white;
-border: none;
-border-radius: 50%; /* Hace el botón circular */
-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-cursor: pointer;
-display: flex;
-justify-content: center;
-align-items: center;
-transition: background-color 0.3s ease;
-}
-
-.side-share-button button:hover {
-background-color: #0056b3;
-}
-
-.side-share-button .icon {
-font-size: 20px; /* Tamaño de la flecha */
-font-weight: bold; /* Asegura que sea visible */
-line-height: 1; /* Centra mejor la flecha */
-}
-
-.side-share-button .share-text {
-margin-left: 10px; /* Espacio entre el círculo y el texto */
-font-size: 16px; /* Tamaño del texto */
-color: #ffffff; /* Color del texto */
-font-family: Arial, sans-serif; /* Fuente del texto */
-white-space: nowrap; /* Evita que el texto se divida en dos líneas */
-}
-
-
-.share-links {
-position: fixed;
-bottom: 10%;
-right: 10%;
-background: #f9f9f9;
-padding: 10px;
-border-radius: 8px;
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.share-links a {
-display: block;
-margin: 5px 0;
-padding: 8px 12px;
-background-color: #007bff;
-color: white;
-text-decoration: none;
-border-radius: 5px;
-font-size: 14px;
-text-align: center;
-transition: background-color 0.3s ease;
-}
-
-.share-links a:hover {
-background-color: #0056b3;
-}
-
-
-.modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  top: 20px;
+  right: 20px;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+}
+.side-share-button button {
+  width: 50px;
+  height: 50px;
+  background-color: #007bff6e;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
-  opacity: 0;
+  transition: background-color 0.3s ease;
+}
+.side-share-button button:hover {
+  background-color: #0056b3;
+}
+.side-share-button .icon { font-size: 20px; font-weight: bold; }
+.side-share-button .share-text {
+  margin-left: 10px;
+  font-size: 16px;
+  color: #fff;
+  font-family: Arial, sans-serif;
+}
+
+/* 🟢 MODAL */
+.modal {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex; justify-content: center; align-items: center;
+  visibility: hidden; opacity: 0;
   transform: scale(0.9);
-  transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease;
   z-index: 10;
 }
-
-.modal.active {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1);
-}
-
+.modal.active { visibility: visible; opacity: 1; transform: scale(1); }
 .modal iframe {
-  width: 80%;
+  width: 90%;
   height: 80%;
   border: none;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
-
 .modal .close-button {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 20px; right: 20px;
   background-color: #06e72c;
   color: white;
   border: none;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 40px; height: 40px;
   font-size: 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
-
 .modal .close-button:hover {
   background-color: #13e600;
-}</style>
-<body>
-  <div class="carousel-container">
-    <div class="book position-left" data-flipbook="flipbook/la experiencia interna.html">
-      <img src="imagenes/libro1.png" alt="Libro 1">
-      <div class="price-label">$10.00</div>
-    </div>
-    <div class="book position-center" data-flipbook="flipbook2.html">
-      <img src="imagenes/libro2.png" alt="Libro 2">
-      <div class="price-label">$15.00</div>
-    </div>
-    <div class="book position-right" data-flipbook="flipbook3.html">
-      <img src="imagenes/libro3.png" alt="Libro 3">
-      <div class="price-label">$20.00</div>
-    </div>
-    <div class="book position-behind" data-flipbook="flipbook4.html">
-      <img src="imagenes/libro4.png" alt="Libro 4">
-      <div class="price-label">$25.00</div>
-    </div>
-    <div class="book position-behind" data-flipbook="flipbook5.html">
-      <img src="imagenes/libro5.png" alt="Libro 5">
-      <div class="price-label">$30.00</div>
-    </div>
-  </div>
+}
 
-  <div class="button-container">
-    <button id="prevBtn" class="arrow-button"></button>
-    <button id="nextBtn" class="arrow-button"></button>
-    <button id="purchaseButton" class="purchase-button">Comprar</button>
-    <button id="subscribeButton" class="subscribe-button">Suscribirse</button>
-  </div>
-
-  <div class="modal" id="modal">
-    <iframe src=""></iframe>
-    <button class="close-button" id="closeModal">&times;</button>
-  </div>
-
-  <div class="side-share-button">
-    <button onclick="shareContent()">
-        <span class="icon">➤</span>
-    </button>
-    <span class="share-text">Compartir</span>
-</div>
-
-
-<div id="fallback-links" class="share-links" style="display: none;">
-    <a href="https://twitter.com/intent/tweet?url=URL_DEL_CONTENIDO" target="_blank" rel="noopener noreferrer">
-        Compartir en Twitter
-    </a>
-    <a href="https://www.facebook.com/sharer/sharer.php?u=URL_DEL_CONTENIDO" target="_blank" rel="noopener noreferrer">
-        Compartir en Facebook
-    </a>
-    <a href="https://www.linkedin.com/shareArticle?url=URL_DEL_CONTENIDO" target="_blank" rel="noopener noreferrer">
-        Compartir en LinkedIn
-    </a>
-</div>
-
-<script>document.getElementById('subscribeButton').addEventListener('click', () => {
-  alert('¡Gracias por suscribirte!');
-});
-
-const books = document.querySelectorAll('.book');
-const positions = ['position-left', 'position-center', 'position-right', 'position-behind', 'position-behind'];
-
-function updatePositions(direction) {
-  if (direction === 'next') {
-    positions.unshift(positions.pop());
-  } else {
-    positions.push(positions.shift());
+/* 🟣 VERSIONES RESPONSIVE */
+@media (max-width: 768px) {
+  .carousel-container {
+    width: 95vw;
+    height: 50vh;
   }
 
-  books.forEach((book, index) => {
-    book.className = `book ${positions[index]}`;
-  });
+  .book {
+    width: 35%;
+    height: 45%;
+  }
+
+  .position-center {
+    transform: translateX(0) scale(1.5);
+  }
+
+  .position-left { transform: translateX(-150%) scale(0.7); }
+  .position-right { transform: translateX(150%) scale(0.7); }
+
+  .button-container {
+    flex-direction: column;
+    bottom: 5%;
+  }
+
+  .purchase-button, .subscribe-button {
+    font-size: 14px;
+    padding: 10px 16px;
+  }
+
+  .side-share-button {
+    top: auto;
+    bottom: 20px;
+    right: 20px;
+  }
 }
 
-document.getElementById('purchaseButton').addEventListener('click', () => {
-  alert('¡Gracias por tu interés! Redirigiendo a la página de compra...');
-  window.location.href = 'pagina_compra.html'; // aqui va la pagina de compra.
-});
+@media (max-width: 480px) {
+  .carousel-container {
+    height: 45vh;
+  }
 
-document.getElementById('nextBtn').addEventListener('click', () => updatePositions('next'));
-document.getElementById('prevBtn').addEventListener('click', () => updatePositions('prev'));
+  .book {
+    width: 45%;
+    height: 40%;
+  }
 
-const modal = document.getElementById('modal');
-const iframe = modal.querySelector('iframe');
-const closeModal = document.getElementById('closeModal');
+  .position-center { transform: translateX(0) scale(1.3); }
+  .position-left { transform: translateX(-120%) scale(0.6); }
+  .position-right { transform: translateX(120%) scale(0.6); }
 
-books.forEach(book => {
-  book.addEventListener('click', () => {
-    const flipbookSrc = book.getAttribute('data-flipbook');
-    iframe.src = flipbookSrc;
-    modal.classList.add('active');
-  });
-});
+  .price-label { font-size: 0.7rem; }
 
-closeModal.addEventListener('click', () => {
-  modal.classList.remove('active');
-  iframe.src = '';
-});
+  .arrow-button {
+    width: 40px;
+    height: 40px;
+  }
 
-function shareContent() {
-if (navigator.share) {
-    navigator.share({
-        title: 'Título del contenido',
-        text: 'Descripción breve de lo que compartes.',
-        url: window.location.href // URL actual
-    })
-    .then(() => console.log('¡Contenido compartido con éxito!'))
-    .catch((error) => console.error('Error al compartir:', error));
-} else {
-    document.getElementById('fallback-links').style.display = 'block';
+  .purchase-button, .subscribe-button {
+    font-size: 13px;
+    padding: 8px 12px;
+  }
+
+  .side-share-button .share-text { display: none; }
 }
-}</script>
-
-</body>
-</html>
+</style>
